--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
@@ -17,7 +17,8 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>AppInstallerFileBuilder_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>ContosoLab.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>330B87B0D27D4055BA2DF5447ED29F26BB73FCA3</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -235,6 +236,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="AppInstallerFileBuilder_TemporaryKey.pfx" />
+    <None Include="ContosoLab.pfx" />
     <PRIResource Include="Strings\en-US\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
