--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
@@ -19,6 +19,12 @@
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>ContosoLab.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>330B87B0D27D4055BA2DF5447ED29F26BB73FCA3</PackageCertificateThumbprint>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Never</AppxBundle>
+    <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
