--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,8 +6,12 @@
 trigger:
 - master
 
+# pool:
+#  vmImage: 'vs2017-win2016'
+
 pool:
-  vmImage: 'vs2017-win2016'
+  name: xPlatAppx
+  demands: Cmd
 
 variables:
   solution: '**/*.sln'
