--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
 
 - task: NuGetToolInstaller@0
 
-- task: 333b11bd-d341-40d9-afcf-b32d5ce6f23b
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b'
   inputs:
     command: 'restore'
     restoreSolution: '**/*.sln'
