--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 
 - task: NuGetToolInstaller@0
 
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b'@2
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 inputs:
   restoreSolution: '$(solution)'
 
