--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
@@ -23,6 +23,9 @@
     <AppxBundlePlatforms>x86|x64</AppxBundlePlatforms>
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <PackageCertificateThumbprint>A5556A0110243FDC39CA78C807B6BEBBE1D1D8D1</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>AppInstallerFileBuilder_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
