--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,16 @@ steps:
 
 - task: NuGetToolInstaller@0
 
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+#   inputs:
+#     restoreSolution: '$(solution)'
+
+- task: NuGetCommand@2
+  displayName: 'NuGet restore'
   inputs:
-    restoreSolution: '$(solution)'
+    restoreSolution: '**/*.sln'
+    feedsToUse: config
+    nugetConfigPath: AppInstallerFileBuilder/.nuget/NuGet.config
 
 - task: VSBuild@1
   inputs:
