Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   inputs:
     restoreSolution: '**/*.sln'
     feedsToUse: config
-    nugetConfigPath: AppInstallerFileBuilder/.nuget/NuGet.config
+    nugetConfigPath: '**/.nuget/NuGet.config'
 
 - task: VSBuild@1
   inputs:
