--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,19 @@ steps:
 #   inputs:
 #     restoreSolution: '$(solution)'
 
+# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+#   displayName: 'NuGet restore'
+#   inputs:
+#     restoreSolution: '**/*.sln'
+#     feedsToUse: config
+#     nugetConfigPath: '**/.nuget/NuGet.config'
+
 - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-  displayName: 'NuGet restore'
   inputs:
+    command: 'restore'
     restoreSolution: '**/*.sln'
-    feedsToUse: config
-    nugetConfigPath: '**/.nuget/NuGet.config'
+    feedsToUse: 'select'
+    versioningScheme: 'off'
 
 - task: VSBuild@1
   inputs:
