--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,12 +32,12 @@ steps:
 #     feedsToUse: config
 #     nugetConfigPath: '**/.nuget/NuGet.config'
 
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-  inputs:
-    command: 'restore'
-    restoreSolution: '**/*.sln'
-    feedsToUse: 'select'
-    versioningScheme: 'off'
+#- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+#  inputs:
+#    command: 'restore'
+#    restoreSolution: '**/*.sln'
+#    feedsToUse: 'select'
+#    versioningScheme: 'off'
 
 - task: VSBuild@1
   inputs:
