--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,12 @@ steps:
 #   inputs:
 #     restoreSolution: '$(solution)'
 
-# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-#   displayName: 'NuGet restore'
-#   inputs:
-#     restoreSolution: '**/*.sln'
-#     feedsToUse: config
-#     nugetConfigPath: '**/.nuget/NuGet.config'
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+  displayName: 'NuGet restore'
+  inputs:
+    restoreSolution: 'AppInstallerFileBuilder/AppInstallerFileBuilder.sln'
+    feedsToUse: config
+    nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.config'
 
 #- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 #  inputs:
