--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
@@ -299,6 +299,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.3</Version>
     </PackageReference>
+    <PackageReference Include="NETStandard.Library">
+      <Version>2.0.3</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AppInstallerFileBuilderLib\AppInstallerFileBuilderLib.csproj">
