--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,9 +23,9 @@ steps:
   inputs:
     versionSpec: '4.3.0'
 
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-  inputs:
-    restoreSolution: '$(solution)'
+# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+#   inputs:
+#     restoreSolution: '$(solution)'
 
 #- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 #  inputs:
