--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,7 +34,7 @@ steps:
 #    feedsToUse: 'select'
 #    versioningScheme: 'off'
 
-- task: NuGetCommand@2
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
   inputs:
     command: 'restore'
     restoreSolution: '**/*.sln'
