--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,21 +24,13 @@ steps:
     versionSpec: '4.3.0'
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-#   inputs:
-#     restoreSolution: '$(solution)'
 
-#- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-#  inputs:
-#    command: 'restore'
-#    restoreSolution: '**/*.sln'
-#    feedsToUse: 'select'
-#    versioningScheme: 'off'
-
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+- task: NuGetCommand@2
   inputs:
     command: 'restore'
     restoreSolution: '**/*.sln'
-    feedsToUse: 'select'
+    feedsToUse: 'config'
+    nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.Config'
     versioningScheme: 'off'
 
 - task: VSBuild@1
