--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ steps:
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 
-- task: NuGetCommand@2
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
   inputs:
     command: 'restore'
     restoreSolution: '**/*.sln'
