--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,14 +24,19 @@ steps:
     versionSpec: '4.3.0'
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-
-- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+- task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
-    restoreSolution: '**/*.sln'
-    feedsToUse: 'config'
-    nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.Config'
+    feedsToUse: 'select'
     versioningScheme: 'off'
+
+# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+#   inputs:
+#     command: 'restore'
+#     restoreSolution: '**/*.sln'
+#     feedsToUse: 'config'
+#     nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.Config'
+#     versioningScheme: 'off'
 
 - task: VSBuild@1
   inputs:
