--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,11 @@ steps:
     versionSpec: '4.3.0'
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
+    projects: '$(solution)'
     feedsToUse: 'select'
     versioningScheme: 'off'
 
