--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,20 +25,13 @@ steps:
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 
-- task: DotNetCoreCLI@2
+- task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
   inputs:
     command: 'restore'
-    projects: '$(solution)'
-    feedsToUse: 'select'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'config'
+    nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.Config'
     versioningScheme: 'off'
-
-# - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
-#   inputs:
-#     command: 'restore'
-#     restoreSolution: '**/*.sln'
-#     feedsToUse: 'config'
-#     nugetConfigPath: 'AppInstallerFileBuilder/.nuget/NuGet.Config'
-#     versioningScheme: 'off'
 
 - task: VSBuild@1
   inputs:
