--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ variables:
 steps:
 - task: NuGetToolInstaller@1
   inputs:
-    versionSpec: '4.3.0'
+    versionSpec: '4.x'
 
 # - task: '333b11bd-d341-40d9-afcf-b32d5ce6f23b@2'
 
