--- a/AppInstallerFileBuilder/AppInstallerFileBuilderLib/AppInstallerFileBuilderLib.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilderLib/AppInstallerFileBuilderLib.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <Reference Include="Windows.Foundation.UniversalApiContract">
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Windows Kits\10\References\10.0.19023.0\Windows.Foundation.UniversalApiContract\10.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+      <HintPath>C:\Program Files (x86)\Windows Kits\10\References\10.0.17763.0\Windows.Foundation.UniversalApiContract\7.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
       <IsWinMDFile>true</IsWinMDFile>
     </Reference>
   </ItemGroup>
