--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/AppInstallerFileBuilder.csproj
@@ -24,8 +24,9 @@
     <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
     <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-    <PackageCertificateThumbprint>A5556A0110243FDC39CA78C807B6BEBBE1D1D8D1</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>FA16E0E4D3F5CC83588E04BA369B88716CB0B58D</PackageCertificateThumbprint>
     <PackageCertificateKeyFile>AppInstallerFileBuilder_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
