--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+# Personal Adjustments
+test*
+*.msix
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
